<resources>
    <string name="app_name">Smartlit</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="powered_by">Powered By</string>
    <string name="mysoft_technology">MySoft Technology</string>

    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verifiy_code">Verifiy Code</string>
    <string name="verify">Verify</string>
    <!-- DATABASE -->
    <string name="base_url">https://smartlit.co.in/app/admin/api/</string>
    <string name="mqtt_server_url">tcp://smartlit.co.in:1883</string>
    <string name="url_register">register</string>
    <string name="url_profile">profile</string>
    <string name="url_room_list">room_list</string>
    <string name="url_room">room</string>
    <string name="url_switch">switch</string>
    <string name="current_user_id">current_user_id</string>
    <string name="url_get_live">get_live</string>
    <string name="url_switch_list">switch_list</string>
    <string name="url_live_update">live_update</string>
    <string name="url_switch_notification">switch_notification</string>
    <string name="url_room_delete">room_delete</string>
    <string name="current_user_email">current_user_email</string>
    <string name="current_user_name">current_user_name</string>
    <string name="url_profile_update">profile_update</string>
    <string name="url_check_child">check_child</string>
    <string name="url_create_opt">create_opt</string>
    <string name="url_get_otp">get_otp</string>
    <string name="url_add_bleutooth">add_bleutooth</string>
    <string name="selected_room_index">selected_room_index</string>

    <integer-array name="icons_list">
        <item>@drawable/ic_light</item>
        <item>@drawable/ic_light_2</item>
        <item>@drawable/ic_light_3</item>
        <item>@drawable/ic_television</item>
        <item>@drawable/ic_router_2</item>
        <item>@drawable/ic_cooking</item>
        <item>@drawable/ic_chimney</item>
        <item>@drawable/ic_ventilator</item>
        <item>@drawable/ic_microwave</item>
        <item>@drawable/ic_toaster</item>
        <item>@drawable/ic_speaker</item>
        <item>@drawable/ic_curtains</item>
        <item>@drawable/ic_desktop</item>
        <item>@drawable/ic_laptop</item>
        <item>@drawable/ic_cctv_cam</item>
        <item>@drawable/ic_gaming</item>
        <item>@drawable/ic_switch1</item>
        <item>@drawable/ic_switch2</item>
        <item>@drawable/ic_switch3</item>
        <item>@drawable/ic_switch4</item>
    </integer-array>

    <string-array name="icons_names">
        <item>Light Bulb</item>
        <item>Light</item>
        <item>Light</item>
        <item>Television</item>
        <item>Router</item>
        <item>Cooking</item>
        <item>Chimney</item>
        <item>Ventilator</item>
        <item>Microwave</item>
        <item>Toaster</item>
        <item>Music</item>
        <item>Curtains</item>
        <item>Desktop</item>
        <item>Laptop</item>
        <item>CCTV</item>
        <item>Gaming</item>
        <item>Switch 1</item>
        <item>Switch 2</item>
        <item>Switch 3</item>
        <item>Switch 4</item>
    </string-array>

    <integer-array name="sl1_icons_list">
        <item>@drawable/ic_air_conditioner</item>
        <item>@drawable/ic_fridge</item>
        <item>@drawable/ic_laundry</item>
        <item>@drawable/ic_heater</item>
        <item>@drawable/ic_water_heater</item>
        <item>@drawable/ic_switch1</item>
        <item>@drawable/ic_switch2</item>
        <item>@drawable/ic_switch3</item>
        <item>@drawable/ic_switch4</item>
    </integer-array>

    <string-array name="sl1_icons_names">
        <item>Air Conditioner</item>
        <item>Refrigerator</item>
        <item>Washing Machine</item>
        <item>Heater</item>
        <item>Water Heater</item>
        <item>Switch 1</item>
        <item>Switch 2</item>
        <item>Switch 3</item>
        <item>Switch 4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configure_bluetooth">This device is not configured properly through bluetooth. To operated this device via bluetooth please fill the wifi details again.\nGo to Rooms > Select \"%s\" > Update Wifi</string>
    <string name="isDashboardFabPromptShown">isDashboardFabPromptShown</string>
    <string name="isRoomControlsFabPromptShown">isRoomControlsFabPromptShown</string>
    <string name="isProfileFabPromptShown">isProfileFabPromptShown</string>
    <string name="isRoomsFabPromptShown">isRoomsFabPromptShown</string>
</resources>