<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_10sdp">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/login_back_btn"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    style="@style/NeumorphismCardView"
                    android:clickable="true"
                    android:focusable="true"
                    app:neumorph_shadowElevation="@dimen/_3sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_4sdp"
                        android:src="@drawable/ic_back" />
                </soup.neumorphism.NeumorphCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/log_in"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                style="@style/NeumorphismCardView"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/login_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/neumorph_background"
                    android:fontFamily="@font/raleway"
                    android:hint="Phone number"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                style="@style/NeumorphismCardView"
                android:backgroundTint="@color/primary"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/login_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:fontFamily="@font/raleway"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="Log in"
                    android:textColor="@color/white" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                style="@style/NeumorphismCardView"
                android:clickable="true"
                android:focusable="true"
                app:neumorph_shapeType="basin">

                <LinearLayout
                    android:id="@+id/login_register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:text="@string/dont_have_an_account"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4ssp"
                        android:fontFamily="@font/raleway"
                        android:text="@string/register"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>
    </ScrollView>

    <!--Bottom Branding-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/powered_by"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/mysoft_technology"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>