<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_14sdp"
                android:text="@string/registration"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/reg_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Full Name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="Shobhit Sagar" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="shobhit.mysoft@gmail.com" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="shobhit.mysoft" />
            </soup.neumorphism.NeumorphCardView>

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="Phone number"-->
            <!--                android:layout_marginTop="@dimen/_4sdp"-->
            <!--                android:paddingHorizontal="@dimen/_14sdp"-->
            <!--                android:textSize="@dimen/_12ssp" />-->

            <!--            <soup.neumorphism.NeumorphCardView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                app:neumorph_shapeType="pressed">-->

            <!--                <LinearLayout-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:orientation="horizontal"-->
            <!--                    android:paddingHorizontal="@dimen/_14sdp"-->
            <!--                    android:gravity="center">-->

            <!--                    <TextView-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="+91"-->
            <!--                        android:textSize="@dimen/_14ssp"/>-->

            <!--                    <EditText-->
            <!--                        android:id="@+id/reg_phone_no"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:hint="0000000000"-->
            <!--                        android:maxLines="1"-->
            <!--                        android:layout_marginStart="@dimen/_2ssp"-->
            <!--                        android:inputType="phone"-->
            <!--                        android:background="@null"-->
            <!--                        android:paddingVertical="@dimen/_12sdp"/>-->

            <!--                </LinearLayout>-->

            <!--            </soup.neumorphism.NeumorphCardView>-->

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:neumorph_shapeType="pressed">

                <!-- TODO: Add digit counter -->

                <EditText
                    android:id="@+id/reg_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Phone number (10 Digits)"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="9560258881" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="12345678" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/reg_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="12345678" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:backgroundTint="@color/primary"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/reg_register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="Register"
                    android:textColor="@color/white" />
            </soup.neumorphism.NeumorphCardView>

            <LinearLayout
                android:id="@+id/reg_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4ssp"
                    android:text="@string/log_in"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>